# spore

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.zig  build.zig.zon  install.sh  main.spore  site.el  test-suite.sh
benches/: benchmarks.rs
crates/spore-lib/: Cargo.toml
crates/spore-lib/benches/: benchmarks.rs
crates/spore-lib/src/: lib.rs  vm.rs
crates/spore-lib/src/builtins/: mod.rs
crates/spore-lib/src/parser/: ast.rs  lexer.rs
crates/spore-lib/src/vm/: compiler.rs  debugger.rs  environment.rs  ir.rs  mod.rs  module.rs
crates/spore-lib/src/vm/types/: instruction.rs  mod.rs  symbol.rs
crates/spore-lib/src/vm/types/proc/: bytecode.rs  mod.rs  native.rs
crates/spore-lib/test_data/: bad.spore  circle.spore
crates/spore-repl/: Cargo.toml
crates/spore-repl/src/: command.rs  lib.rs
crates/spore-repl/test_data/: main.spore
crates/vm/: Cargo.toml
crates/vm/benches/: bench.rs  fib.rs
crates/vm/examples/: fib.rs  spore-repl.rs
crates/vm/src/: ast.rs  builtins.rs  compiler.rs  debugger.rs  error.rs  lib.rs  repl.rs  settings.rs  stack_frame.rs  tokenizer.rs  val.rs  val_store.rs
crates/vm/src/builtins/: boxes.rs  lists.rs  mod.rs  numbers.rs  strings.rs  structs.rs  system.rs
crates/vm/src/compiler/: ir.rs  mod.rs
crates/vm/src/gc/: interned_string.rs  keep_reachable_set.rs  mod.rs  object_store.rs  symbol_interner.rs
crates/vm/src/parser/: ast.rs  mod.rs  span.rs  tokenizer.rs
crates/vm/src/val/: bytecode.rs  custom.rs  formatter.rs  id.rs  internal.rs  mod.rs  native_function.rs  protected_val.rs  struct_val.rs  symbol.rs  unsafe_val.rs  val.rs
docs/: README.md  getting-started.md  language-reference.md  quickstart.md  roadmap.md  zig-api.md
examples/: fib.spore  hello-world.sp  hello-world.spore  spore.rs
project-management/: quickstart.md
site/: Gemfile  _config.yml  index.markdown  index.md  index.org  installation.md  modules.md  reference.md  repl-commands.md  (+2 more)
(+102 files in other folders)
