[package]
name = "spore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
colored = "2"
rustyline = "13"

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "1.4"

[profile.release]
debug = true

[[bench]]
name = "benchmarks"
harness = false