[package]
name = "spore-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

[dev-dependencies]
criterion = "0.3"
pretty_assertions = "1.4"

[[bench]]
name = "benchmarks"
harness = false