[package]
name = "spore-repl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
colored = "2"
spore-lib = { path = "../spore-lib" }
rustyline = "13"

[dev-dependencies]
pretty_assertions = "1.4"
