[package]
name = "spore-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
bumpalo = { version = "3.16", features = ["collections"] }
compact_str = "0.8"
ctor = "0.2"
log = "0.4"
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
